Fixed overflowing text on long posts

--- a/src/features/post/post.css
+++ b/src/features/post/post.css
@@ -13,6 +13,10 @@
 	border-radius: 0;
 }
 
+.textMedia.exclusive {
+	max-height: none;
+}
+
 .post.exclusive .content.media img {
 	max-height: 75vh;
 }
@@ -90,9 +94,7 @@
 	align-items: flex-start;
 	justify-content: flex-start;
 }
-.textMedia {
-	max-height: none;
-}
+
 .md ul {
 	padding-left: 1rem;
 }
